# AIE5

./: COLAB_AI_Makerspace_Unsloth_GRPO_Training.ipynb  Fine_tuning_Embedding_Models_for_RAG_Solution_Notebook.ipynb
00_AIM_Quicklinks/: README.md
01_Prompt Engineering and Prototyping Best Practices/: README.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  pyproject.toml
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  app.py  pyproject.toml
06_Multi_Agent_with_LangGraph/agents/: fact_checking_team.py  rag_chain.py  research_team.py  utils.py  writing_team.py
06_Multi_Agent_with_LangGraph/workspace/: LinkedIn_Post_DeepSeek-R1.txt  LinkedIn_Post_DeepSeek_Outline.txt  LinkedIn_Post_DeepSeek_Outline_V2.txt
06_Multi_Agent_with_LangGraph/workspace/tmp/: AI_Solution_LinkedIn_Post_Outline
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml  testset_data.json
13_Advanced_Retrieval/eval_results/bm25_retrieval/: dataset.json  ragas_results.json
13_Advanced_Retrieval/eval_results/ensemble_retrieval/: dataset.json  ragas_results.json
13_Advanced_Retrieval/eval_results/multi_query_retrieval/: dataset.json  ragas_results.json
13_Advanced_Retrieval/eval_results/naive_retrieval/: dataset.json  ragas_results.json
13_Advanced_Retrieval/eval_results/parent_document_retrieval/: dataset.json  ragas_results.json
(+25 files in other folders)
