[project]
name = "06-multi-agent-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.33",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.69",
    "pymupdf>=1.25.2",
    "qdrant-client>=1.13.2",
]
