[project]
name = "13-advanced-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere>=0.4.2",
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "ragas>=0.2.13",
    "rapidfuzz>=3.12.1",
    "pandas>=2.2.3",
    "langsmith>=0.3.10",
    "typing-extensions>=4.12.2",
]
